--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
+    <video id="background-video" autoplay loop muted poster="./assets/img/ninja.png">
         <source src="./ninja.mp4" type="video/mp4">
       </video>
       
