--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
     <title>Senshi</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -14,5 +14,36 @@
       
       <h1>THIS IS SENSHI.</h1>
       <h2>A Powerful Swordsman</h2>
+
+      <nav id= "top" style = "padding: 0;">
+        <div style = "padding: 0 10%;">
+            <p style = "color: #fff; margin-top: 0px;">戦士</p>
+            <p style = "color: #fff; margin-top: -10px;">senshi</p>
+        </div>
+      </nav>
+      <nav id= "bottom">
+        <ul>
+          <li><a href="">Botton 01</a></li>
+          <li><a href="">Botton 02</a></li>
+          <li><a href="">Botton 03</a></li>
+          <li class="logo"><a href="">HI</a></li>
+        </ul>  
+      </nav>
+      <nav id= "left">
+        <ul>
+          <li><a href="">Botton 01</a></li>
+          <li><a href="">Botton 02</a></li>
+          <li><a href="">Botton 03</a></li>
+          <li class="logo"><a href="">HI</a></li>
+        </ul>  
+      </nav>
+      <nav id= "right">
+        <ul>
+          <li><a href="">Botton 01</a></li>
+          <li><a href="">Botton 02</a></li>
+          <li><a href="">Botton 03</a></li>
+          <li class="logo"><a href="">HI</a></li>
+        </ul>  
+    </nav>
 </body>
 </html>
