--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
           <li class="logo"><a href="">HI</a></li>
         </ul>  
       </nav>
-      <nav id= "left">
+      <div style = "position: fixed; top: 50px; bottom: 50px; right: 0; left:0;overflow-y: hidden;">
+        <nav id= "left">
         <ul>
           <li><a href="">Botton 01</a></li>
           <li><a href="">Botton 02</a></li>
@@ -45,5 +46,6 @@
           <li class="logo"><a href="">HI</a></li>
         </ul>  
     </nav>
+    </div>
 </body>
 </html>
