--- a/index.html
+++ b/index.html
@@ -6,45 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
     <title>Senshi</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <video id="background-video" autoplay loop muted poster="./assets/img/ninja.png">
         <source src="./ninja.mp4" type="video/mp4">
       </video>
       
-      <h1>THIS IS SENSHI.</h1>
-      <h2>A Powerful Swordsman</h2>
+      <div class = "heading">
+        <h1>The ----- CHOOSEN WARRIOR</h1>
+        <h2>SENSHI</h2>
+      </div>
 
       <nav id= "top" style = "padding: 0;">
-        <div style = "padding: 0 10%;">
-            <p style = "color: #fff; margin-top: 0px;">戦士</p>
-            <p style = "color: #fff; margin-top: -10px;">senshi</p>
+        <div style = "padding: 0 70px;">
+            <p style = "color: #fff; margin-top: 0px;font-size: 30px;">戦士戦士戦</p>
+            <p style = "color: #fff; margin-top: -30px;font-size: 25px">senshi</p>
         </div>
       </nav>
       <nav id= "bottom">
-        <ul>
-          <li><a href="">Botton 01</a></li>
-          <li><a href="">Botton 02</a></li>
-          <li><a href="">Botton 03</a></li>
-          <li class="logo"><a href="">HI</a></li>
-        </ul>  
+        <div style = "display: flex; justify-content: space-between; align-items: center;">
+          <div>
+            <ul>
+              <li><a href="">Liquidity Burned</a></li>
+              <li style = "padding: 0 10px;border-left: 2px solid #fff; border-right: 2px solid #fff;margin: 0 10px;"><a href=""> OWNERSHIP RENOUNCED</a></li>
+              <li><a href=""> LOW TAX</a></li>
+            </ul> 
+          </div>
+          <div style = "margin: 0 30px;">
+            <i class = "fa fa-bars" style = "color: #fff;font-size: 30px;"></i>
+          </div>
+        </div> 
       </nav>
-      <div style = "position: fixed; top: 50px; bottom: 50px; right: 0; left:0;overflow-y: hidden;">
+      <div style = "position: fixed; top: 70px; bottom: 70px; right: 0; left:0;overflow-y: hidden;">
         <nav id= "left">
         <ul>
-          <li><a href="">Botton 01</a></li>
-          <li><a href="">Botton 02</a></li>
-          <li><a href="">Botton 03</a></li>
-          <li class="logo"><a href="">HI</a></li>
+          <li><a href="">Twitter</a></li>
+          <li><a href="">Telegram</a></li>
+          <li><a href="">Medium</a></li>
+          <li><a href="">Source Code</a></li>
+          <li><a href="">CMC</a></li>
         </ul>  
       </nav>
       <nav id= "right">
         <ul>
-          <li><a href="">Botton 01</a></li>
-          <li><a href="">Botton 02</a></li>
-          <li><a href="">Botton 03</a></li>
-          <li class="logo"><a href="">HI</a></li>
-        </ul>  
+          <li><a href="">COINGEKO</a></li>
+          <li style = "padding: 0 10px;border-left: 2px solid #fff; border-right: 2px solid #fff;margin: 0 10px;"><a href="">CMC</a></li>
+          <li><a href="">ETHERSCAN</a></li>
+        </ul>
     </nav>
     </div>
 </body>
