--- a/index.html
+++ b/index.html
@@ -21,17 +21,13 @@
       <nav id= "top" style = "padding: 0;">
         <div style = "padding: 0 70px;">
             <p style = "color: #fff; margin-top: 0px;font-size: 30px;">戦士戦士戦</p>
-            <p style = "color: #fff; margin-top: -30px;font-size: 25px">senshi</p>
+            <p style = "color: #fff; margin-top: -30px;font-size: 25px; letter-spacing: 4px;">SENSHI</p>
         </div>
       </nav>
       <nav id= "bottom">
         <div style = "display: flex; justify-content: space-between; align-items: center;">
           <div>
-            <ul>
-              <li><a href="">Liquidity Burned</a></li>
-              <li style = "padding: 0 10px;border-left: 2px solid #fff; border-right: 2px solid #fff;margin: 0 10px;"><a href=""> OWNERSHIP RENOUNCED</a></li>
-              <li><a href=""> LOW TAX</a></li>
-            </ul> 
+            <!-- <p style = "font-size: 30px; color:#fff; word-wrap: break-word;margin-left: 30px; font-family:monospace;">Liquidity Burned | OWNERSHIP RENOUNCED | LOW TAX</p> -->
           </div>
           <div style = "margin: 0 30px;">
             <i class = "fa fa-bars" style = "color: #fff;font-size: 30px;"></i>
@@ -49,11 +45,13 @@
         </ul>  
       </nav>
       <nav id= "right">
-        <ul>
+        <!-- <ul>
           <li><a href="">COINGEKO</a></li>
           <li style = "padding: 0 10px;border-left: 2px solid #fff; border-right: 2px solid #fff;margin: 0 10px;"><a href="">CMC</a></li>
           <li><a href="">ETHERSCAN</a></li>
-        </ul>
+        </ul> -->
+        <div style = "display: flex; align-items: center; justify-content: center;">
+          <h1 style = "font-size: 20px; margin-top: 30px;">The ----- CHOOSEN WARRIOR</h1></div>
     </nav>
     </div>
 </body>
