--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <nav id= "bottom">
         <div style = "display: flex; justify-content: space-between; align-items: center;">
           <div>
-            <!-- <p style = "font-size: 30px; color:#fff; word-wrap: break-word;margin-left: 30px; font-family:monospace;">Liquidity Burned | OWNERSHIP RENOUNCED | LOW TAX</p> -->
+            <p style = "font-size: 30px; color:#fff; word-wrap: break-word;margin-left: 30px; font-family:monospace;">Liquidity Burned | OWNERSHIP RENOUNCED | LOW TAX</p>
           </div>
           <div style = "margin: 0 30px;">
             <i class = "fa fa-bars" style = "color: #fff;font-size: 30px;"></i>
