--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </nav>
       <nav id= "right">
         <ul>
-          <li><a href="">COINGEKO</a></li>
+          <li><a href="">COINGECKO</a></li>
           <li style = "padding: 0 10px;border-left: 2px solid #fff; border-right: 2px solid #fff;margin: 0 10px;"><a href="">CMC</a></li>
           <li><a href="">ETHERSCAN</a></li>
         </ul>
