--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
           <div class = "container">
             <div class = "row">
               <div class = "col-lg-6">
-                <img src="./Screenshot (124).png" class = "img-fluid" alt="">
+                <video autoplay loop muted poster="./assets/img/ninja.png" class = "img-fluid">
+                  <source src="./ninja1.mp4" type="video/mp4">
+                </video>
               </div>
               <div class = "col-lg-6">
                 <h1>ABOUT SENSHI</h1>
