--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <li id = "about" style = "color: #fff;">About Senshi</li>
       </ul>
       <div class = "heading">
-        <h1 style = "font-size: 30px;">The ----- CHOOSEN WARRIOR</h1>
-        <h2 style = "font-size: 150px;">SENSHI</h2>
+        <h1 style = "font-size: 30px;text-shadow: 0 0 3px #000, 5px 5px 5px #000;">The ----- CHOOSEN WARRIOR</h1>
+        <h2 style = "font-size: 150px;text-shadow: 0 0 3px #000, 5px 5px 5px #000;">SENSHI</h2>
       </div>
 
       <nav id= "top" style = "padding: 0;">
@@ -68,10 +68,10 @@
       <nav id= "bottom">
         <div style = "display: flex; justify-content: space-between; align-items: center;">
           <div>
-            <p style = "font-size: 30px; color:#fff; word-wrap: break-word;margin-left: 30px; font-family:monospace;margin-top: 20px">Liquidity Burned | OWNERSHIP RENOUNCED | LOW TAX</p>
+            <p style = "font-size: 30px; color:#fff; word-wrap: break-word;margin-left: 30px; font-family:monospace;margin-top: 20px">Liquidity Burned | Ownership Renounced | Low Tax</p>
           </div>
           <div style = "margin: 0 30px;" class = "ham-menu">
-            <i class = "fa fa-bars" id = "menu-click" style = "color: #fff;font-size: 30px;margin-top: 0;"></i>
+            <i class = "fa fa-bars" id = "menu-click" style = "color: #fff;font-size: 30px;margin-top: 0;cursor: pointer;"></i>
           </div>
         </div> 
       </nav>
@@ -82,7 +82,6 @@
           <li><a href="">Telegram</a></li>
           <li><a href="">Medium</a></li>
           <li><a href="">Source Code</a></li>
-          <li><a href="">CMC</a></li>
         </ul>  
       </nav>
       <nav id= "right">
