--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
       <ul style = "margin-top: -50px; margin-left: -180px;position: fixed;right: 30px; bottom: 40px;z-index: 1;" id="menu-ul" class = "menu-ul">
         <li><a href="">Home</a></li>
-        <li><a href="#">buy</a></li>
+        <li><a href="#">Buy</a></li>
         <li id = "about" style = "color: #fff;">About Senshi</li>
       </ul>
       <div class = "heading">
