--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Senshi</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -12,6 +12,87 @@
 <style>
     .menu-visible{
     display: block;
+  }
+
+  .left {
+    position: absolute;
+    top: 0;
+    left:0;
+    bottom: 50px;
+    width: 100vh;
+    transform-origin: left top;
+    transform: rotate(-90deg) translateX(-100%);
+    height: 70px;
+    z-index: 0;
+    background-color: rgba(37, 35, 35, 0.3);
+  }
+  .right{
+    position: absolute;
+    margin-bottom: 200px;
+    top: 0;
+    right:0;
+    width: 100vh;
+    z-index: -1 !important;
+    transform-origin: right top;
+    transform: rotate(90deg) translateX(100%);
+    height: 70px;
+    background-color: rgba(37, 35, 35, 0.3);
+  }
+  .top{
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 70px;
+    background-color: rgba(37, 35, 35, 0.3);
+    font-family: 'Ink Free', sans-serif;
+  }
+  .bottom{
+    position: fixed;
+    bottom: 0;
+    width: 100vw;
+    height: 70px;
+    background-color: rgba(37, 35, 35, 0.3);
+  }
+
+  @media screen and (max-height: 1000px) {
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+    }
+
+    .tokenomics{
+      font-size: 15px !important;
+      margin-left: 20px;
+    }
+
+    nav{
+      height: 50px !important;
+      background-color: transparent !important;
+    }
+
+    .bottom{
+      height: 80px !important
+    }
+
+    .heading{
+      left: 60px;
+      bottom: 70px;
+      font-size: 10px;
+  }
+
+  .senshi{
+    font-size: 50px;
+  }
+
+  .left ul{
+    margin: 15px 0 0 110px;
+  }
+
+  .nav-brand{
+    padding: 10px 30px;
+  }
   }
 </style>
 </head>
@@ -49,42 +130,41 @@
           </div>
         </div>
       </div>
-      <ul style = "margin-top: -50px; margin-left: -180px;position: fixed;right: 30px; bottom: 40px;z-index: 1;" id="menu-ul" class = "menu-ul">
+      <ul id="menu-ul" class = "menu-ul">
         <li><a href="">Home</a></li>
         <li><a href="#">Buy</a></li>
         <li id = "about" style = "color: #fff;">About Senshi</li>
       </ul>
       <div class = "heading">
-        <h1 style = "font-size: 30px;text-shadow: 0 0 3px #000, 5px 5px 5px #000;">The ----- CHOOSEN WARRIOR</h1>
-        <h2 style = "font-size: 150px;text-shadow: 0 0 3px #000, 5px 5px 5px #000;">SENSHI</h2>
+        <h1>The ----- CHOOSEN WARRIOR</h1>
+        <h2 class = "senshi">SENSHI</h2>
       </div>
 
-      <nav id= "top" style = "padding: 0;">
-        <div style = "padding: 0 70px;">
-            <p style = "color: #fff; margin-top: 0px;font-size: 30px;">戦士戦士戦</p>
-            <p style = "color: #fff; margin-top: -30px;font-size: 25px; letter-spacing: 4px;">SENSHI</p>
+      <nav class= "top" style = "padding: 0;">
+        <div class = "nav-brand">
+            <p class = "japanese">戦士戦士戦</p>
+            <p class = "senshi-heading">SENSHI</p>
         </div>
       </nav>
-      <nav id= "bottom">
+      <nav class= "bottom">
         <div style = "display: flex; justify-content: space-between; align-items: center;">
           <div>
-            <p style = "font-size: 30px; color:#fff; word-wrap: break-word;margin-left: 30px; font-family:monospace;margin-top: 20px">Liquidity Burned | Ownership Renounced | Low Tax</p>
+            <p class = "tokenomics" style = "font-size: 35px;">Liquidity Burned | Ownership Renounced | Low Tax</p>
           </div>
           <div style = "margin: 0 30px;" class = "ham-menu">
             <i class = "fa fa-bars" id = "menu-click" style = "color: #fff;font-size: 30px;margin-top: 0;cursor: pointer;"></i>
           </div>
         </div> 
       </nav>
-      <div style = "position: fixed; top: 70px; bottom: 70px; right: 0; left:0;overflow-y: hidden;">
-        <nav id= "left">
+      <div class = "left-right">
+        <nav class= "left">
         <ul>
           <li><a href="">Twitter</a></li>
           <li><a href="">Telegram</a></li>
           <li><a href="">Medium</a></li>
-          <li><a href="">Source Code</a></li>
         </ul>  
       </nav>
-      <nav id= "right">
+      <nav class= "right">
         <ul>
           <li><a href="">COINGECKO</a></li>
           <li style = "padding: 0 10px;border-left: 2px solid #fff; border-right: 2px solid #fff;margin: 0 10px;"><a href="">CMC</a></li>
