--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     background-color: rgba(37, 35, 35, 0.3);
   }
 
-  @media screen and (max-height: 1000px) {
+  @media only screen and (max-width: 1000px) {
     .overlay a {font-size: 20px}
     .overlay .closebtn {
     font-size: 40px;
@@ -92,6 +92,7 @@
 
   .nav-brand{
     padding: 10px 30px;
+    font-size: 10px;
   }
   }
 </style>
