--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     background-color: rgba(37, 35, 35, 0.3);
   }
 
-  @media only screen and (max-width: 667px) {
+  @media only screen and (max-width: 991px) {
     .overlay a {font-size: 20px}
     .overlay .closebtn {
     font-size: 40px;
@@ -76,24 +76,28 @@
       height: 80px !important
     }
 
+    .left-right ul{
+      margin-left: 130px !important;
+    }
+
     .heading{
       left: 60px;
       bottom: 70px;
       font-size: 10px;
-  }
+    }
 
-  .senshi{
-    font-size: 50px;
-  }
+    .senshi{
+      font-size: 50px;
+    }
 
-  .left ul{
-    margin: 15px 0 0 110px;
-  }
+    .left ul{
+      margin: 15px 0 0 110px;
+    }
 
-  .nav-brand{
-    padding: 10px 30px;
-    font-size: 10px;
-  }
+    .nav-brand{
+      padding: 10px 30px;
+      font-size: 10px;
+    }
   }
 </style>
 </head>
@@ -150,7 +154,7 @@
       <nav class= "bottom">
         <div style = "display: flex; justify-content: space-between; align-items: center;">
           <div>
-            <p class = "tokenomics" style = "font-size: 35px;">Liquidity Burned | Ownership Renounced | Low Tax</p>
+            <p class = "tokenomics" style = "font-size: 35px;">Locked Liquidity | Ownership Renounced | Low Tax</p>
           </div>
           <div style = "margin: 0 30px;" class = "ham-menu">
             <i class = "fa fa-bars" id = "menu-click" style = "color: #fff;font-size: 30px;margin-top: 0;cursor: pointer;"></i>
