--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     }
 
     .left-right ul{
-      margin-left: 230px !important;
+      margin-left: 200px !important;
     }
 
     .heading{
@@ -87,7 +87,7 @@
     }
 
     .senshi{
-      font-size: 50px;
+      font-size: 80px;
     }
 
     .left ul{
@@ -102,7 +102,7 @@
 </style>
 </head>
 <body>
-    <video id="background-video" autoplay loop muted poster="./assets/img/ninja.png">
+    <video id="background-video" autoplay loop muted>
         <source src="./ninja.mp4" type="video/mp4">
       </video>
 
@@ -171,11 +171,18 @@
       </nav>
       <nav class= "right">
         <ul>
-          <li><a href="">COINGECKO</a></li>
+          <li><a data-toggle="modal" data-target="#exampleModalCenter">COINGECKO</a></li>
           <li style = "padding: 0 10px;border-left: 2px solid #fff; border-right: 2px solid #fff;margin: 0 10px;"><a href="">CMC</a></li>
           <li><a href="">ETHERSCAN</a></li>
         </ul>
     </nav>
+    </div>
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content text-center py-5" style = "background: rgba(0, 0, 0, 0.95)">
+          <h1>Coming Soon</h1>
+        </div>
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
