--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 </style>
 </head>
 <body>
-    <video id="background-video" autoplay loop muted>
+    <video id="background-video" autoplay loop muted playsinline>
         <source src="./ninja.mp4" type="video/mp4">
       </video>
 
