--- a/index.html
+++ b/index.html
@@ -136,9 +136,10 @@
         </div>
       </div>
       <ul id="menu-ul" class = "menu-ul">
-        <li><a href="">Home</a></li>
+        <li><a href="#">Home</a></li>
         <li><a href="#">Buy</a></li>
-        <li id = "about" style = "color: #fff;">About Senshi</li>
+        <li id = "about"><a href="#">About Senshi</a></li>
+        <!-- <li id = "about" style = "color: #fff;">About Senshi</li> -->
       </ul>
       <div class = "heading">
         <h1>The ----- CHOOSEN WARRIOR</h1>
@@ -171,8 +172,8 @@
       </nav>
       <nav class= "right">
         <ul>
-          <li><a data-toggle="modal" data-target="#exampleModalCenter">COINGECKO</a></li>
-          <li style = "padding: 0 10px;border-left: 2px solid #fff; border-right: 2px solid #fff;margin: 0 10px;"><a href="">CMC</a></li>
+          <li><button style = "background: none; border: none;" data-toggle="modal" data-target="#exampleModalCenter"><a href="#">COINGECKO</a></button></li>
+          <li style = "padding: 0 10px;border-left: 2px solid #fff; border-right: 2px solid #fff;margin: 0 10px;"><button style = "background: none; border: none;" data-toggle="modal" data-target="#exampleModalCenter"><a href="#">CMC</a></button></li>
           <li><a href="">ETHERSCAN</a></li>
         </ul>
     </nav>
