--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
 </style>
 </head>
 <body>
+
+  <div id="preloder">
+    <div class="loader"></div>
+</div>
+
+
     <video id="background-video" autoplay loop muted playsinline>
         <source src="./ninja.mp4" type="video/mp4">
       </video>
@@ -165,8 +171,8 @@
       <div class = "left-right">
         <nav class= "left">
         <ul>
-          <li><a href="">Twitter</a></li>
-          <li><a href="">Telegram</a></li>
+          <li><a href="https://twitter.com/senshieth?s=21&t=oSsbxrHOJYkISXQQmtEscQ">Twitter</a></li>
+          <li><a href="https://t.me/Senshitoken">Telegram</a></li>
           <li><a href="">Medium</a></li>
         </ul>  
       </nav>
@@ -190,6 +196,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
+      
+      document.onreadystatechange = function() { 
+        if (document.readyState !== "complete") { 
+            document.querySelector("#preloder").style.visibility = "visible"; 
+            document.querySelector("body").style.visibility = "hidden"; 
+        } else { 
+            document.querySelector("#preloder").style.display = "none";
+            document.querySelector("body").style.visibility = "visible"; 
+        } 
+      };
       $("#menu-click").click(function(){
         $("#menu-ul").toggleClass("menu-visible");
       });
