--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <!-- <li id = "about" style = "color: #fff;">About Senshi</li> -->
       </ul>
       <div class = "heading">
-        <h1>The ----- CHOSEN WARRIOR</h1>
+        <h1>THE ----- CHOSEN WARRIOR</h1>
         <h2 class = "senshi">SENSHI</h2>
       </div>
 
