--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <ul>
           <li><a href="https://twitter.com/senshieth?s=21&t=oSsbxrHOJYkISXQQmtEscQ">Twitter</a></li>
           <li><a href="https://t.me/Senshitoken">Telegram</a></li>
-          <li><a href="">Medium</a></li>
+          <li><a href="https://medium.com/@andromedalancers/senshi-the-chosen-warrior-e03569a6565d">Medium</a></li>
         </ul>  
       </nav>
       <nav class= "right">
